--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1>Event Validation</h1>
 
     <div class="display">
-        <input type="text" id="date" oninput="myDate()" placeholder="enter date">
+        <input type="date" id="date" oninput="myDate()" placeholder="enter date">
         <p><b>Event:</b> <span id="datte"></span></p>
         
     </div>
