--- a/month.html
+++ b/month.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+     
     
     <script>
     let oldDate = new Date(2020, 03, 8)
@@ -19,4 +20,4 @@
  console.log(months2[newDate.getMonth()]);
     </script>
 </body>
-</html> -->
+</html>
