--- a/time.html
+++ b/time.html
@@ -1,12 +1,20 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Time</title>
 </head>
 <body>
+    <h2>Time is displaying in the console</h2>
+
+    <script>
+        let oldDate = new Date(2020, 03, 8)
+        let newDate = new Date()
+
+        console.log(newDate.toLocaleTimeString());
+        </script>
     
 </body>
-</html> -->
+</html>
